<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/quizPlaySound"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle_shape"
        android:padding="40dp"
        app:layout_constraintBottom_toTopOf="@+id/quizOption1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_volume"
        android:contentDescription="@string/play_word_sound" />

    <Button
        android:id="@+id/quizOption1"
        style="@style/QuizOptionStyle"
        android:text="@string/a"
        app:layout_constraintBottom_toTopOf="@+id/quizOption3"
        app:layout_constraintEnd_toStartOf="@+id/quizOption2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizPlaySound" />

    <Button
        android:id="@+id/quizOption2"
        style="@style/QuizOptionStyle"
        android:text="@string/b"
        app:layout_constraintBottom_toTopOf="@+id/quizOption4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quizOption1"
        app:layout_constraintTop_toBottomOf="@+id/quizPlaySound" />

    <Button
        android:id="@+id/quizOption3"
        style="@style/QuizOptionStyle"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="@+id/quizOption4"
        app:layout_constraintEnd_toStartOf="@+id/quizOption4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quizOption4" />

    <Button
        android:id="@+id/quizOption4"
        style="@style/QuizOptionStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/d"
        app:layout_constraintBottom_toTopOf="@+id/quizNextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quizOption3"
        app:layout_constraintTop_toBottomOf="@+id/quizOption2" />

    <Button
        android:id="@+id/quizNextBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/next_btn"
        android:text="@string/next_farsi"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>